@@ -4,6 +4,7 @@ Fixed bug  991: AvoidSynchronizedAtMethodLevel for static methods
 Fixed bug 1084: NPE at UselessStringValueOfRule.java:36
 Fixed bug 1091: file extension for fortran seems to be wrong in cpdgui tools
 Fixed bug 1092: Wrong Attribute "excludemarker" in Ant Task Documentation
+Fixed bug 1095: AvoidFinalLocalVariable false positive
 Fixed bug 1099: UseArraysAsList false positives
 Fixed bug 1102: False positive: shift operator parenthesis
 Fixed bug 1104: IdempotentOperation false positive
